Save current UcMarket updates